force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/agf__ADM_Scrum_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Team Member</label>
    <nameField>
        <displayFormat>STM-{00000}</displayFormat>
        <label>Team Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>