force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/fields/agf__Allocation__c.field-meta.xml
<CustomField>
    <fullName>agf__Allocation__c</fullName>
    <label>Allocation (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>