force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/fields/agf__Department__c.field-meta.xml
<CustomField>
    <fullName>agf__Department__c</fullName>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>