force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/fields/agf__External_Email__c.field-meta.xml
<CustomField>
    <fullName>agf__External_Email__c</fullName>
    <label>External Email</label>
    <type>Email</type>
</CustomField>