force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/fields/agf__formula_email__c.field-meta.xml
<CustomField>
    <fullName>agf__formula_email__c</fullName>
    <formula>IF(  ISNULL(agf__External_Email__c), IF( ISNULL(agf__Internal_Email__c), &apos;&apos;,agf__Internal_Email__c), agf__External_Email__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>