force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/fields/agf__Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>agf__Functional_Area__c</fullName>
    <label>Functional Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>