force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/fields/agf__Group_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__Group_ID__c</fullName>
    <formula>agf__Scrum_Team__r.agf__Team_Email_Group_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group ID</label>
    <type>Text</type>
</CustomField>