force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/fields/agf__Internal_Email__c.field-meta.xml
<CustomField>
    <fullName>agf__Internal_Email__c</fullName>
    <formula>agf__Member_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Email</label>
    <type>Text</type>
</CustomField>