force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/fields/agf__Member_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Member_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scrum_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>