force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/fields/agf__Member_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>agf__Member_Name_Formula__c</fullName>
    <formula>IF ( OR ( $RecordType.Name = &apos;Internal&apos;, $RecordType.Name = &apos;&apos; ), agf__Member_Name__r.FirstName &amp; &apos; &apos; &amp; agf__Member_Name__r.LastName,
IF ( $RecordType.Name = &apos;External&apos;, &apos;(External) &apos; , &apos;(Planned)&apos; ) &amp; agf__Member_Name_Text__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>