force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/fields/agf__Member_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>agf__Member_Name_Text__c</fullName>
    <label>Member Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>