force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/fields/agf__Record_Type_Copy__c.field-meta.xml
<CustomField>
    <fullName>agf__Record_Type_Copy__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <label>Record Type Copy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>