force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/fields/agf__Req_Code__c.field-meta.xml
<CustomField>
    <fullName>agf__Req_Code__c</fullName>
    <label>Req. Code</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>