force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/fields/agf__Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Scrum_Team__c</fullName>
    <label>Team</label>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Team Members</relationshipLabel>
    <relationshipName>Scrum_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>