force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/fields/agf__Scrum_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Scrum_Team_Name__c</fullName>
    <formula>agf__Scrum_Team__r.Name</formula>
    <label>Team Name</label>
    <type>Text</type>
</CustomField>