force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/recordTypes/agf__External.recordType-meta.xml
<RecordType>
    <fullName>agf__External</fullName>
    <active>true</active>
    <description>Employee from outside SFDC</description>
    <label>External</label>
</RecordType>