force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/recordTypes/agf__Internal.recordType-meta.xml
<RecordType>
    <fullName>agf__Internal</fullName>
    <active>true</active>
    <description>SFDC Employee</description>
    <label>Internal</label>
</RecordType>