force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/recordTypes/agf__Planned.recordType-meta.xml
<RecordType>
    <fullName>agf__Planned</fullName>
    <active>true</active>
    <description>Planned head count</description>
    <label>Planned</label>
</RecordType>