force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/validationRules/agf__Allocate_over_limit.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Allocate_over_limit</fullName>
    <active>true</active>
    <errorConditionFormula>agf__Allocation__c &gt; 1.00</errorConditionFormula>
    <errorDisplayField>agf__Allocation__c</errorDisplayField>
    <errorMessage>Allocation percent should not exceed 100%</errorMessage>
</ValidationRule>