force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/validationRules/agf__Allocation_above_0.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Allocation_above_0</fullName>
    <active>true</active>
    <description>Allocation should not be below zero</description>
    <errorConditionFormula>agf__Allocation__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>agf__Allocation__c</errorDisplayField>
    <errorMessage>Allocation should not be a negative number</errorMessage>
</ValidationRule>