force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/validationRules/agf__Allocation_cant_exceed_100.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Allocation_cant_exceed_100</fullName>
    <active>true</active>
    <description>Allocation should not exceed 100%</description>
    <errorConditionFormula>agf__Allocation__c  &gt; 100</errorConditionFormula>
    <errorDisplayField>agf__Allocation__c</errorDisplayField>
    <errorMessage>Allocation should not exceed 100%</errorMessage>
</ValidationRule>