force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Member__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>agf__Member_Name__c</columns>
    <columns>agf__Scrum_Team__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>agf__Record_Type_Copy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>